# ExecOS

./: .gitignore  ExecOS_PRD_v2.docx  README.md  inspiration-start.sh  start.sh
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8c44c66bdb1d_add_organizations_invitations_user_org_.py
backend/app/agents/: boardroom.py  events.py  executor.py  orchestrator.py  pipeline.py  synthesizer.py  utils.py  validator.py
backend/app/api/: auth.py  chat.py  router.py  session.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  invitations.py  onboard.py  session.py
backend/app/auth/: dependencies.py  utils.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/memory/: service.py
backend/app/middleware/: session.py
backend/app/models/: __init__.py  base.py  chat_message.py  invitation.py  organization.py  session.py  user.py
backend/app/onboarding/: flow.py
backend/app/repository/: __init__.py  message_repository.py  org_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth_schemas.py  chat_schemas.py  session_schemas.py
backend/app/services/: __init__.py  auth_service.py  memory_service.py
backend/app/services/boardroom/: __init__.py  events.py  executor.py  orchestrator.py  pipeline.py  prompts.py  synthesizer.py  validator.py
backend/app/utils/: __init__.py  database.py  email_utils.py  llm.py  logger.py  security.py
docs/: README.md
docs/development/: dev-setup.md  ruff-setup.md
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentMessage.tsx  Boardroom.tsx  Onboarding.tsx  OnboardingChat.tsx  Sidebar.tsx
frontend/src/components/auth/: LoginPage.tsx  SignupPage.tsx
frontend/src/constants/: agents.ts
frontend/src/hooks/: AuthProvider.tsx  useAuth.ts  useChat.ts  useSession.ts  useVoice.ts
